@@ -2,7 +2,7 @@ include CHANGES.txt
 include COPYRIGHT.txt
 include HISTORY.txt
 include LICENSES.txt
-include README.txt
+include README.rst
 include TODO.txt
 recursive-include docs *
 prune docs/*.pyc
