@@ -1189,7 +1189,7 @@ class ServerOptions(Options):
                        'The current environment will only allow you '
                        'to open %(hard)s file descriptors.  Either raise '
                        'the number of usable file descriptors in your '
-                       'environment (see README.txt) or lower the '
+                       'environment (see README.rst) or lower the '
                        'minfds setting in the config file to allow '
                        'the process to start.'),
                 'min':self.minfds,
@@ -1205,7 +1205,7 @@ class ServerOptions(Options):
                        'The current environment will only allow you '
                        'to open %(hard)s processes.  Either raise '
                        'the number of usable processes in your '
-                       'environment (see README.txt) or lower the '
+                       'environment (see README.rst) or lower the '
                        'minprocs setting in the config file to allow '
                        'the program to start.'),
                 'min':self.minprocs,
